fix(navbar): center nav components on smaller screens

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -40,6 +40,7 @@ h1 {
 }
 
 h2 {
+	-webkit-text-decoration: underline var(--underline);
 	text-decoration: underline var(--underline);
 	text-decoration-thickness: 4px;
 	text-underline-offset: 6px;
@@ -56,6 +57,8 @@ h2 {
 p {
 	font-family: var(--body);
 	font-size: 1.1rem;
+	-webkit-hyphens: auto;
+	-ms-hyphens: auto;
 	hyphens: auto;
 	line-height: 1.5;
 	text-indent: 1rem;
@@ -88,19 +91,20 @@ li {
 	align-items: center;
 }
 
-.navbar__title > a,
-.navbar__menu > a {
+.navbar__title>a,
+.navbar__menu>a {
 	color: var(--text);
 	text-decoration: none;
 }
 
-.navbar__menu > a {
+.navbar__menu>a {
 	margin: 0 10px;
 }
 
-.navbar__title > a:hover,
-.navbar__menu > a:hover,
-.navbar__menu > a:focus {
+.navbar__title>a:hover,
+.navbar__menu>a:hover,
+.navbar__menu>a:focus {
+	-webkit-text-decoration: underline var(--underline);
 	text-decoration: underline var(--underline);
 	text-decoration-thickness: 2px;
 	text-underline-offset: 6px;
@@ -129,7 +133,7 @@ li {
 	padding: 0;
 }
 
-.badge__list > li {
+.badge__list>li {
 	margin-top: 10px;
 }
 
@@ -167,6 +171,7 @@ li {
 
 .card__img {
 	border-radius: 12px;
+	-o-object-fit: cover;
 	object-fit: cover;
 }
 
@@ -311,11 +316,11 @@ html.light {
 	color: var(--text-light);
 }
 
-.light .navbar__title > a {
+.light .navbar__title>a {
 	color: var(--text-light);
 }
 
-.light .navbar__menu > a {
+.light .navbar__menu>a {
 	color: var(--text-light);
 }
 
@@ -366,7 +371,10 @@ html.light {
 	}
 
 	.navbar {
-		display: initial;
+		display: flex;
+		gap: 1rem;
+		flex-direction: column;
+		align-items: center;
 	}
 
 	.navbar__title {
@@ -377,7 +385,7 @@ html.light {
 		text-align: center;
 	}
 
-	.navbar__menu > a {
+	.navbar__menu>a {
 		margin: 0 11px;
 	}
 
